--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/eslint": "^8.21.1",
     "@types/node": "^18.14.0",
     "@types/prettier": "^2.7.2",
@@ -34,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.7",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.2.1",
     "postcss": "^8.4.14",
